deploy: e1ef5581fbf2dd16c7134b005bf7a5b0945324b1

--- a/index.html
+++ b/index.html
@@ -1,118 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Gonzalo Loayza – ML & Data Science</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 2rem 1rem 4rem;
-      line-height: 1.6;
-    }
-    h1, h2, h3 {
-      margin-bottom: 0.3rem;
-    }
-    .subtitle {
-      color: #555;
-      margin-bottom: 1.5rem;
-    }
-    a {
-      color: #2563eb;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .tag {
-      display: inline-block;
-      padding: 2px 8px;
-      border-radius: 999px;
-      background: #eef2ff;
-      font-size: 0.8rem;
-      margin-right: 0.3rem;
-      margin-bottom: 0.3rem;
-    }
-    section {
-      margin-bottom: 2rem;
-    }
-    .project {
-      margin-bottom: 1.3rem;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Gonzalo Loayza</h1>
-    <p class="subtitle">
-      Senior Computer Science student at BYU · Machine Learning & Predictive Analytics
-    </p>
-    <p>
-      Email: <a href="mailto:gloayza5@byu.edu">gloayza5@byu.edu</a> ·
-      <a href="https://www.linkedin.com/in/CS_gloayza" target="_blank">LinkedIn</a> ·
-      <a href="https://github.com/gonza055" target="_blank">GitHub</a>
-    </p>
-  </header>
+<p>Welcome!<br />
+I am a Computer Science student at BYU specializing in Machine Learning and Predictive Analytics.</p>
 
-  <section>
-    <h2>Summary</h2>
-    <p>
-      I work with large-scale time-series, simulation, and operational datasets, applying Python,
-      statistics, and ML workflows to support data-driven engineering and decision-making problems.
-    </p>
-  </section>
+<p>I work with:</p>
+<ul>
+  <li>Industrial time-series (sensor data)</li>
+  <li>Simulation analytics (C++ + Python)</li>
+  <li>Predictive maintenance</li>
+  <li>Data-centric ML workflows</li>
+</ul>
 
-  <section>
-    <h2>Projects</h2>
+<p>Explore my projects and experience below.</p>
 
-    <div class="project">
-      <h3>Honors Thesis – Unsupervised Mode Discovery in Mineral Processing</h3>
-      <p><span class="tag">Python</span><span class="tag">Unsupervised ML</span><span class="tag">In progress</span></p>
-      <p>
-        Designing an unsupervised-learning framework to identify operating modes in mineral-processing circuits,
-        using clustering, dimensionality reduction, and statistical validation on plant data.
-      </p>
-    </div>
-
-    <div class="project">
-      <h3>Predictive Maintenance – Sensor Data Conditioning & Feature Engineering</h3>
-      <p><span class="tag">Python</span><span class="tag">Time-series</span><span class="tag">Industrial data</span></p>
-      <p>
-        Built a reproducible preprocessing workflow for 50k+ industrial sensor time-series with smoothing,
-        outlier capping, and signal reconstruction, plus reliability-focused feature sets for downstream
-        predictive maintenance.
-      </p>
-    </div>
-
-    <div class="project">
-      <h3>TrainOps Simulation Data Optimization</h3>
-      <p><span class="tag">C++</span><span class="tag">Python</span><span class="tag">Simulation</span></p>
-      <p>
-        Developed automation utilities to parse and analyze 200k+ rail-network simulation records, reducing
-        processing time by ~70% and supporting data-driven transit-planning decisions.
-      </p>
-    </div>
-
-    <div class="project">
-      <h3>Predictive Maintenance Modeling Prototype (Academic)</h3>
-      <p><span class="tag">Python</span><span class="tag">ML</span></p>
-      <p>
-        Academic ML pipeline inspired by industrial conditions: EDA, noise reduction, feature engineering,
-        time-series labeling, and baseline models (Random Forest, SVM, Gradient Boosting) for early detection
-        of abnormal equipment behavior.
-      </p>
-    </div>
-  </section>
-
-  <section>
-    <h2>Resume</h2>
-    <p>
-      You can download my latest resume here:
-      <!-- cuando tengas tu PDF en este repo o en otro lado, actualiza este link -->
-      <a href="#" target="_blank">Download resume (PDF)</a>
-    </p>
-  </section>
-</body>
-</html>
