deploy: 4c760b8d90a408aabf53a9945a192478ac82e7f6

--- a/index.html
+++ b/index.html
@@ -1,13 +1,78 @@
-<p>Welcome!<br />
-I am a Computer Science student at BYU specializing in Machine Learning and Predictive Analytics.</p>
+<div class="hero">
+  <h1>Gonzalo Loayza</h1>
+  <p class="subtitle">
+    Machine Learning &amp; Data Science · B.S. Computer Science @ BYU
+  </p>
 
-<p>I work with:</p>
+  <p class="tagline">
+    I work on predictive maintenance, large-scale time-series analysis, and
+    data-centric ML systems for real-world engineering problems.
+  </p>
+
+  <div class="hero-buttons">
+    <a class="btn primary" href="/projects/">View Projects</a>
+    <a class="btn" href="/assets/Gonzalo_Loayza_Resume.pdf">Download Resume</a>
+    <a class="btn" href="https://github.com/Gonza055" target="_blank">GitHub</a>
+  </div>
+</div>
+
+<hr />
+
+<h2 id="about">About</h2>
+
+<p>I am a senior Computer Science student at Brigham Young University (BYU) with a
+Machine Learning emphasis. My work focuses on applying ML and statistical
+methods to noisy, real-world datasets from mining, transportation, and
+industrial operations.</p>
+
+<p>I enjoy building clean, reproducible data pipelines, designing features for
+time-series and sensor data, and turning complex datasets into actionable,
+engineering-grade insights.</p>
+
+<hr />
+
+<h2 id="technical-focus">Technical Focus</h2>
+
 <ul>
-  <li>Industrial time-series (sensor data)</li>
-  <li>Simulation analytics (C++ + Python)</li>
-  <li>Predictive maintenance</li>
-  <li>Data-centric ML workflows</li>
+  <li><strong>Machine Learning &amp; Data</strong>
+    <ul>
+      <li>anomaly detection, time-series analysis, feature engineering</li>
+      <li>exploratory data analysis (EDA), model evaluation, ML pipelines</li>
+      <li>scikit-learn, Pandas, NumPy</li>
+    </ul>
+  </li>
+  <li><strong>Programming &amp; Systems</strong>
+    <ul>
+      <li>Python, C++, SQL, basic JavaScript</li>
+      <li>Git, Linux, Jupyter Notebook</li>
+    </ul>
+  </li>
+  <li><strong>Domains</strong>
+    <ul>
+      <li>predictive maintenance and reliability</li>
+      <li>simulation data analysis (rail operations)</li>
+      <li>industrial and mineral-processing systems</li>
+    </ul>
+  </li>
 </ul>
 
-<p>Explore my projects and experience below.</p>
+<hr />
+
+<h2 id="highlighted-projects">Highlighted Projects</h2>
+
+<h3 id="predictive-maintenance--sensor-data-conditioning--feature-engineering">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering</h3>
+
+<p>Industrial time-series project based on 50k+ high-noise sensor signals from
+crushing and grinding equipment. Built a reproducible preprocessing workflow
+with smoothing, outlier handling, and signal reconstruction, then engineered
+reliability-focused features (load ratios, temperature deltas, transient-spike
+metrics) to support downstream failure-prediction models.</p>
+
+<p>→ <a href="/projects/#predictive-maintenance">Read full project</a></p>
+
+<hr />
+
+<h3 id="trainops-simulation-data-optimization">TrainOps Simulation Data Optimization</h3>
+
+<p>Data-engineering and automation</p>
 
