deploy: f5950b08e9d36a67d545cc5c6d59e87596cc3aca

--- a/index.html
+++ b/index.html
@@ -74,5 +74,30 @@ metrics) to support downstream failure-prediction models.</p>
 
 <h3 id="trainops-simulation-data-optimization">TrainOps Simulation Data Optimization</h3>
 
-<p>Data-engineering and automation</p>
+<p>Data-engineering and automation project using Python and C++ to process
+200k+ rail-simulation records. Developed parsers and scripts that reduced
+output-processing time by ~70% compared to manual workflows, and integrated
+rider-survey data with onboard sensor logs to analyze service scenarios.</p>
 
+<p>→ <a href="/projects/#trainops">Read full project</a></p>
+
+<hr />
+
+<h3 id="predictive-maintenance-modeling-prototype-academic">Predictive Maintenance Modeling Prototype (Academic)</h3>
+
+<p>Academic ML prototype that mirrors industrial predictive-maintenance settings.
+Includes EDA, noise reduction, feature engineering, exploratory labeling of
+time-series, and benchmarking of baseline models such as Random Forest, SVM,
+and gradient boosting for early detection of abnormal equipment behavior.</p>
+
+<p>→ <a href="/projects/#pm-modeling">Read full project</a></p>
+
+<hr />
+
+<h2 id="contact">Contact</h2>
+
+<ul>
+  <li>Email: <a href="mailto:gloayza5@byu.edu">gloayza5@byu.edu</a></li>
+  <li>LinkedIn: <a href="https://www.linkedin.com/in/CS_gloayza" target="_blank">CS_gloayza</a></li>
+  <li>GitHub: <a href="https://github.com/Gonza055" target="_blank">Gonza055</a></li>
+</ul>
