deploy: 314d0e43f17c8c3893d819ca4cda526ea6222f1b

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,23 +1,115 @@
-<h1 id="selected-projects">Selected Projects</h1>
+<h1 id="projects">Projects</h1>
 
-<h2 id="predictive-maintenance--sensor-data-conditioning-2025">Predictive Maintenance – Sensor Data Conditioning (2025)</h2>
-<p>Built preprocessing workflows for 50k+ industrial sensor time-series (noise reduction, outlier capping, reconstruction).<br />
-Designed reliability features for downstream ML failure prediction.</p>
-
-<hr />
-
-<h2 id="trainops-simulation-data-optimization-2024">TrainOps Simulation Data Optimization (2024)</h2>
-<p>Developed C++/Python parsers for 200k+ simulation records.<br />
-Reduced processing time by 70%.<br />
-Integrated survey data + sensor logs to validate scenarios.</p>
+<p>Below are selected projects that demonstrate my experience with
+machine learning, time-series analysis, and data-centric software
+development.</p>
 
 <hr />
 
-<h2 id="ml-failure-mode-prototyping-202425">ML Failure-Mode Prototyping (2024–25)</h2>
-<p>EDA, feature engineering, baseline classifiers (RF, SVM, GBoost).<br />
-Early experimentation for predictive-maintenance modeling.</p>
+<h2 id="predictive-maintenance">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering</h2>
+
+<p><strong>Context.</strong> Industrial maintenance setting with 50k+ high-noise sensor
+time-series from crushing and grinding equipment.</p>
+
+<p><strong>What I built</strong></p>
+
+<ul>
+  <li>A reproducible preprocessing pipeline (smoothing, outlier capping, signal
+reconstruction) for noisy sensor data.</li>
+  <li>A reliability-focused feature set including load ratios, temperature deltas,
+and transient-spike metrics designed for condition-based maintenance.</li>
+  <li>Structured datasets ready for downstream failure-prediction models.</li>
+</ul>
+
+<p><strong>Tech stack</strong></p>
+
+<ul>
+  <li>Python, Pandas, NumPy, Jupyter</li>
+  <li>Time-series preprocessing, feature engineering, EDA</li>
+</ul>
+
+<p><strong>Impact</strong></p>
+
+<ul>
+  <li>Enabled future ML experimentation for early-warning indicators and
+reliability analysis on critical assets.</li>
+</ul>
 
 <hr />
 
-<p>More projects coming soon.</p>
+<h2 id="trainops">TrainOps Simulation Data Optimization</h2>
 
+<p><strong>Context.</strong> Data-engineering project using simulation outputs from TrainOps
+for rail operations planning (~200k records across multiple scenarios).</p>
+
+<p><strong>What I built</strong></p>
+
+<ul>
+  <li>Python and C++ parsers to transform raw simulation outputs into structured,
+analysis-ready datasets.</li>
+  <li>Automation scripts that eliminated manual parsing and reduced processing time
+by about 70%.</li>
+  <li>Workflows to integrate rider-survey data with onboard sensor logs to validate
+demand and service patterns.</li>
+</ul>
+
+<p><strong>Tech stack</strong></p>
+
+<ul>
+  <li>C++, Python, Pandas, basic SQL, Git</li>
+</ul>
+
+<p><strong>Impact</strong></p>
+
+<ul>
+  <li>Improved clarity and speed of scenario comparison for planning teams and
+supported data-driven decision-making.</li>
+</ul>
+
+<hr />
+
+<h2 id="pm-modeling">Predictive Maintenance Modeling Prototype (Academic)</h2>
+
+<p><strong>Context.</strong> Academic project inspired by industrial predictive-maintenance
+settings.</p>
+
+<p><strong>What I built</strong></p>
+
+<ul>
+  <li>An ML pipeline including data cleaning, noise reduction, feature engineering,
+and exploratory labeling of time-series patterns.</li>
+  <li>Baseline models (Random Forest, SVM, Gradient Boosting) to test early
+detection of abnormal equipment behavior.</li>
+  <li>Evaluation and comparison of models using standard metrics and visualization.</li>
+</ul>
+
+<p><strong>Tech stack</strong></p>
+
+<ul>
+  <li>Python, scikit-learn, Pandas, NumPy, Matplotlib</li>
+</ul>
+
+<p><strong>Outcome</strong></p>
+
+<ul>
+  <li>Served as an experimental foundation for later industrial work on predictive
+maintenance.</li>
+</ul>
+
+<hr />
+
+<h2 id="honors-thesis--unsupervised-mode-discovery-in-mineral-processing-in-progress">Honors Thesis – Unsupervised Mode Discovery in Mineral Processing (In Progress)</h2>
+
+<p><strong>Goal.</strong> Design an unsupervised-learning framework to identify operating modes
+in mineral-processing circuits using plant datasets.</p>
+
+<p><strong>Approach</strong></p>
+
+<ul>
+  <li>Clustering, dimensionality reduction, and statistical validation of
+discovered modes.</li>
+  <li>Focus on supporting performance monitoring and early detection of suboptimal
+operating states.</li>
+</ul>
+
+<p><em>(More details coming as the research progresses.)</em></p>
