deploy: c88827edc81ca6a54d22ad2cb9e1f04ce9c5358a

--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@ development.</p>
 
 <hr />
 
-<h2 id="predictive-maintenance">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering</h2>
+<h2 id="predictive-maintenance--sensor-data-conditioning--feature-engineering">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering</h2>
 
 <p><strong>Context.</strong> Industrial maintenance setting with 50k+ high-noise sensor
 time-series from crushing and grinding equipment.</p>
@@ -16,8 +16,8 @@ time-series from crushing and grinding equipment.</p>
 <ul>
   <li>A reproducible preprocessing pipeline (smoothing, outlier capping, signal
 reconstruction) for noisy sensor data.</li>
-  <li>A reliability-focused feature set including load ratios, temperature deltas,
-and transient-spike metrics designed for condition-based maintenance.</li>
+  <li>Reliability-focused feature sets including load ratios, temperature deltas,
+and transient-spike metrics.</li>
   <li>Structured datasets ready for downstream failure-prediction models.</li>
 </ul>
 
@@ -31,26 +31,23 @@ and transient-spike metrics designed for condition-based maintenance.</li>
 <p><strong>Impact</strong></p>
 
 <ul>
-  <li>Enabled future ML experimentation for early-warning indicators and
-reliability analysis on critical assets.</li>
+  <li>Enabled future ML experimentation for early-warning indicators and reliability analysis.</li>
 </ul>
 
 <hr />
 
-<h2 id="trainops">TrainOps Simulation Data Optimization</h2>
+<h2 id="trainops-simulation-data-optimization">TrainOps Simulation Data Optimization</h2>
 
-<p><strong>Context.</strong> Data-engineering project using simulation outputs from TrainOps
-for rail operations planning (~200k records across multiple scenarios).</p>
+<p><strong>Context.</strong> Data-engineering project using simulation outputs (~200k records)
+for rail operations planning.</p>
 
 <p><strong>What I built</strong></p>
 
 <ul>
-  <li>Python and C++ parsers to transform raw simulation outputs into structured,
+  <li>Python &amp; C++ parsers to convert raw simulation logs into structured,
 analysis-ready datasets.</li>
-  <li>Automation scripts that eliminated manual parsing and reduced processing time
-by about 70%.</li>
-  <li>Workflows to integrate rider-survey data with onboard sensor logs to validate
-demand and service patterns.</li>
+  <li>Automation workflow reducing processing time by ~70%.</li>
+  <li>Pipelines integrating rider-survey data with onboard sensor logs for validation.</li>
 </ul>
 
 <p><strong>Tech stack</strong></p>
@@ -62,25 +59,22 @@ demand and service patterns.</li>
 <p><strong>Impact</strong></p>
 
 <ul>
-  <li>Improved clarity and speed of scenario comparison for planning teams and
-supported data-driven decision-making.</li>
+  <li>Improved scenario comparison and supported data-driven transit-planning decisions.</li>
 </ul>
 
 <hr />
 
-<h2 id="pm-modeling">Predictive Maintenance Modeling Prototype (Academic)</h2>
+<h2 id="predictive-maintenance-modeling-prototype-academic">Predictive Maintenance Modeling Prototype (Academic)</h2>
 
 <p><strong>Context.</strong> Academic project inspired by industrial predictive-maintenance
-settings.</p>
+scenarios.</p>
 
 <p><strong>What I built</strong></p>
 
 <ul>
-  <li>An ML pipeline including data cleaning, noise reduction, feature engineering,
-and exploratory labeling of time-series patterns.</li>
-  <li>Baseline models (Random Forest, SVM, Gradient Boosting) to test early
-detection of abnormal equipment behavior.</li>
-  <li>Evaluation and comparison of models using standard metrics and visualization.</li>
+  <li>ML pipeline with cleaning, denoising, feature engineering, and exploratory labeling.</li>
+  <li>Baseline models (Random Forest, SVM, Gradient Boosting).</li>
+  <li>Evaluation with standard metrics + visualization.</li>
 </ul>
 
 <p><strong>Tech stack</strong></p>
@@ -92,24 +86,5 @@ detection of abnormal equipment behavior.</li>
 <p><strong>Outcome</strong></p>
 
 <ul>
-  <li>Served as an experimental foundation for later industrial work on predictive
-maintenance.</li>
+  <li>Provided foundational experimentation for later industrial predictive maintenance work.</li>
 </ul>
-
-<hr />
-
-<h2 id="honors-thesis--unsupervised-mode-discovery-in-mineral-processing-in-progress">Honors Thesis – Unsupervised Mode Discovery in Mineral Processing (In Progress)</h2>
-
-<p><strong>Goal.</strong> Design an unsupervised-learning framework to identify operating modes
-in mineral-processing circuits using plant datasets.</p>
-
-<p><strong>Approach</strong></p>
-
-<ul>
-  <li>Clustering, dimensionality reduction, and statistical validation of
-discovered modes.</li>
-  <li>Focus on supporting performance monitoring and early detection of suboptimal
-operating states.</li>
-</ul>
-
-<p><em>(More details coming as the research progresses.)</em></p>
