--- a/projects/index.html
+++ b/projects/index.html
@@ -1,4 +1,4 @@
-<h1 id="selected-projects">Selected Projects</h1>
+<h1 id="projects">Projects</h1>
 
 <p>Below are selected projects that demonstrate my experience with
 machine learning, time-series analysis, and data-centric software
@@ -6,7 +6,7 @@ development.</p>
 
 <hr />
 
-<h2 id="predictive-maintenance--sensor-data-conditioning--feature-engineering-2025">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering (2025)</h2>
+<h2 id="predictive-maintenance--sensor-data-conditioning--feature-engineering">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering</h2>
 
 <p><strong>Context.</strong> Industrial maintenance setting with 50k+ high-noise sensor
 time-series from crushing and grinding equipment.</p>
@@ -32,12 +32,12 @@ and transient-spike metrics.</li>
 
 <ul>
   <li>Enabled future ML experimentation for early-warning indicators and
-reliability analysis on critical assets.</li>
+reliability analysis.</li>
 </ul>
 
 <hr />
 
-<h2 id="trainops-simulation-data-optimization-2024">TrainOps Simulation Data Optimization (2024)</h2>
+<h2 id="trainops-simulation-data-optimization">TrainOps Simulation Data Optimization</h2>
 
 <p><strong>Context.</strong> Data-engineering project using simulation outputs (~200k records)
 for rail operations planning.</p>
@@ -60,12 +60,13 @@ analysis-ready datasets.</li>
 <p><strong>Impact</strong></p>
 
 <ul>
-  <li>Improved scenario comparison and supported data-driven transit-planning decisions.</li>
+  <li>Improved scenario comparison and supported data-driven transit-planning
+decisions.</li>
 </ul>
 
 <hr />
 
-<h2 id="predictive-maintenance-modeling-prototype-academic-202425">Predictive Maintenance Modeling Prototype (Academic, 2024–25)</h2>
+<h2 id="predictive-maintenance-modeling-prototype-academic">Predictive Maintenance Modeling Prototype (Academic)</h2>
 
 <p><strong>Context.</strong> Academic project inspired by industrial predictive-maintenance
 scenarios.</p>
@@ -73,9 +74,10 @@ scenarios.</p>
 <p><strong>What I built</strong></p>
 
 <ul>
-  <li>ML pipeline with cleaning, denoising, feature engineering, and exploratory labeling.</li>
+  <li>ML pipeline with cleaning, denoising, feature engineering, and exploratory
+labeling.</li>
   <li>Baseline models (Random Forest, SVM, Gradient Boosting).</li>
-  <li>Evaluation with standard metrics + visualization.</li>
+  <li>Evaluation with standard metrics plus visualization.</li>
 </ul>
 
 <p><strong>Tech stack</strong></p>
@@ -90,8 +92,3 @@ scenarios.</p>
   <li>Provided foundational experimentation for later industrial predictive
 maintenance work.</li>
 </ul>
-
-<hr />
-
-<p>More projects coming soon.</p>
-
