deploy: 28aaa20b999d5e65e06fdcea02b6d3b337473a27

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,23 +1,16 @@
 <h1 id="projects">Projects</h1>
 
-<p>Below are selected projects that demonstrate my experience with
-machine learning, time-series analysis, and data-centric software
-development.</p>
-
-<hr />
+<p>Below are selected projects that demonstrate my experience with machine learning, time-series analysis, and data-centric software development.</p>
 
 <h2 id="predictive-maintenance--sensor-data-conditioning--feature-engineering">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering</h2>
 
-<p><strong>Context.</strong> Industrial maintenance setting with 50k+ high-noise sensor
-time-series from crushing and grinding equipment.</p>
+<p><strong>Context.</strong> Industrial maintenance setting with 50k+ high-noise sensor time-series from crushing and grinding equipment.</p>
 
 <p><strong>What I built</strong></p>
 
 <ul>
-  <li>A reproducible preprocessing pipeline (smoothing, outlier capping, signal
-reconstruction) for noisy sensor data.</li>
-  <li>Reliability-focused feature sets including load ratios, temperature deltas,
-and transient-spike metrics.</li>
+  <li>Reproducible preprocessing pipeline (smoothing, outlier capping, signal reconstruction) for noisy sensor data.</li>
+  <li>Reliability-focused feature sets including load ratios, temperature deltas, and transient-spike metrics.</li>
   <li>Structured datasets ready for downstream failure-prediction models.</li>
 </ul>
 
@@ -30,23 +23,18 @@ and transient-spike metrics.</li>
 
 <p><strong>Impact</strong></p>
 
-<ul>
-  <li>Enabled future ML experimentation for early-warning indicators and
-reliability analysis.</li>
-</ul>
+<p>Enabled future ML experimentation for early-warning indicators and reliability analysis.</p>
 
 <hr />
 
 <h2 id="trainops-simulation-data-optimization">TrainOps Simulation Data Optimization</h2>
 
-<p><strong>Context.</strong> Data-engineering project using simulation outputs (~200k records)
-for rail operations planning.</p>
+<p><strong>Context.</strong> Data-engineering project using simulation outputs (~200k records) for rail operations planning.</p>
 
 <p><strong>What I built</strong></p>
 
 <ul>
-  <li>Python &amp; C++ parsers to convert raw simulation logs into structured,
-analysis-ready datasets.</li>
+  <li>Python &amp; C++ parsers to convert raw simulation logs into structured, analysis-ready datasets.</li>
   <li>Automation workflow reducing processing time by ~70%.</li>
   <li>Pipelines integrating rider-survey data with onboard sensor logs for validation.</li>
 </ul>
@@ -59,25 +47,20 @@ analysis-ready datasets.</li>
 
 <p><strong>Impact</strong></p>
 
-<ul>
-  <li>Improved scenario comparison and supported data-driven transit-planning
-decisions.</li>
-</ul>
+<p>Improved scenario comparison and supported data-driven transit-planning decisions.</p>
 
 <hr />
 
 <h2 id="predictive-maintenance-modeling-prototype-academic">Predictive Maintenance Modeling Prototype (Academic)</h2>
 
-<p><strong>Context.</strong> Academic project inspired by industrial predictive-maintenance
-scenarios.</p>
+<p><strong>Context.</strong> Academic project inspired by industrial predictive-maintenance scenarios.</p>
 
 <p><strong>What I built</strong></p>
 
 <ul>
-  <li>ML pipeline with cleaning, denoising, feature engineering, and exploratory
-labeling.</li>
+  <li>ML pipeline with cleaning, denoising, feature engineering, and exploratory labeling.</li>
   <li>Baseline models (Random Forest, SVM, Gradient Boosting).</li>
-  <li>Evaluation with standard metrics plus visualization.</li>
+  <li>Evaluation with standard metrics and visualization.</li>
 </ul>
 
 <p><strong>Tech stack</strong></p>
@@ -88,7 +71,4 @@ labeling.</li>
 
 <p><strong>Outcome</strong></p>
 
-<ul>
-  <li>Provided foundational experimentation for later industrial predictive
-maintenance work.</li>
-</ul>
+<p>Provided foundational experimentation for later industrial predictive-maintenance work.</p>
