--- a/projects/index.html
+++ b/projects/index.html
@@ -1,38 +1,52 @@
 <h1 id="selected-projects">Selected Projects</h1>
 
+<p>Below are selected projects that demonstrate my experience with
+machine learning, time-series analysis, and data-centric software
+development.</p>
+
+<hr />
+
 <h2 id="predictive-maintenance--sensor-data-conditioning--feature-engineering-2025">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering (2025)</h2>
 
-<p><strong>Context.</strong> Industrial maintenance setting with 50k+ high-noise sensor time-series from crushing and grinding equipment.</p>
+<p><strong>Context.</strong> Industrial maintenance setting with 50k+ high-noise sensor
+time-series from crushing and grinding equipment.</p>
 
 <p><strong>What I built</strong></p>
 
 <ul>
-  <li>Preprocessing pipeline for noisy sensor data (smoothing, outlier capping, signal reconstruction).</li>
-  <li>Reliability-focused feature sets (load ratios, temperature deltas, transient-spike metrics).</li>
+  <li>A reproducible preprocessing pipeline (smoothing, outlier capping, signal
+reconstruction) for noisy sensor data.</li>
+  <li>Reliability-focused feature sets including load ratios, temperature deltas,
+and transient-spike metrics.</li>
   <li>Structured datasets ready for downstream failure-prediction models.</li>
 </ul>
 
 <p><strong>Tech stack</strong></p>
 
 <ul>
-  <li>Python, Pandas, NumPy, Jupyter.</li>
-  <li>Time-series preprocessing, feature engineering, EDA.</li>
+  <li>Python, Pandas, NumPy, Jupyter</li>
+  <li>Time-series preprocessing, feature engineering, EDA</li>
 </ul>
 
 <p><strong>Impact</strong></p>
 
-<p>Enabled future ML experimentation for early-warning indicators and reliability analysis.</p>
+<ul>
+  <li>Enabled future ML experimentation for early-warning indicators and
+reliability analysis on critical assets.</li>
+</ul>
 
 <hr />
 
 <h2 id="trainops-simulation-data-optimization-2024">TrainOps Simulation Data Optimization (2024)</h2>
 
-<p><strong>Context.</strong> Data-engineering project using simulation outputs (~200k records) for rail operations planning.</p>
+<p><strong>Context.</strong> Data-engineering project using simulation outputs (~200k records)
+for rail operations planning.</p>
 
 <p><strong>What I built</strong></p>
 
 <ul>
-  <li>C++/Python parsers to convert raw simulation logs into structured, analysis-ready datasets.</li>
+  <li>Python &amp; C++ parsers to convert raw simulation logs into structured,
+analysis-ready datasets.</li>
   <li>Automation workflow reducing processing time by ~70%.</li>
   <li>Pipelines integrating rider-survey data with onboard sensor logs for validation.</li>
 </ul>
@@ -40,36 +54,43 @@
 <p><strong>Tech stack</strong></p>
 
 <ul>
-  <li>C++, Python, Pandas, basic SQL, Git.</li>
+  <li>C++, Python, Pandas, basic SQL, Git</li>
 </ul>
 
 <p><strong>Impact</strong></p>
 
-<p>Improved scenario comparison and supported data-driven transit-planning decisions.</p>
+<ul>
+  <li>Improved scenario comparison and supported data-driven transit-planning decisions.</li>
+</ul>
 
 <hr />
 
-<h2 id="ml-failure-mode-prototyping-202425">ML Failure-Mode Prototyping (2024–25)</h2>
+<h2 id="predictive-maintenance-modeling-prototype-academic-202425">Predictive Maintenance Modeling Prototype (Academic, 2024–25)</h2>
 
-<p><strong>Context.</strong> Early experimentation for predictive-maintenance modeling inspired by industrial scenarios.</p>
+<p><strong>Context.</strong> Academic project inspired by industrial predictive-maintenance
+scenarios.</p>
 
 <p><strong>What I built</strong></p>
 
 <ul>
-  <li>EDA, feature engineering, baseline classifiers (Random Forest, SVM, Gradient Boosting).</li>
-  <li>Evaluation with standard metrics and visualizations.</li>
+  <li>ML pipeline with cleaning, denoising, feature engineering, and exploratory labeling.</li>
+  <li>Baseline models (Random Forest, SVM, Gradient Boosting).</li>
+  <li>Evaluation with standard metrics + visualization.</li>
 </ul>
 
 <p><strong>Tech stack</strong></p>
 
 <ul>
-  <li>Python, scikit-learn, Pandas, NumPy, Matplotlib.</li>
+  <li>Python, scikit-learn, Pandas, NumPy, Matplotlib</li>
 </ul>
 
 <p><strong>Outcome</strong></p>
 
-<p>Provided foundational experimentation for later industrial predictive-maintenance work.</p>
+<ul>
+  <li>Provided foundational experimentation for later industrial predictive
+maintenance work.</li>
+</ul>
 
 <hr />
 
-<p><em>More projects coming soon.</em></p>
+<p>More projects coming soon.</p>
