deploy: 39d041f623bc9118d3c1c76fa379407c262f2a7c

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,96 +1,53 @@
-<h1 id="selected-projects">Selected Projects</h1>
+<h2 id="selected-projects">Selected Projects</h2>
 
-<p>Below are selected projects that demonstrate my experience with
-machine learning, time-series analysis, and data-centric software
-development.</p>
-
-<hr />
-
-<h2 id="predictive-maintenance--sensor-data-conditioning--feature-engineering-2025">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering (2025)</h2>
-
-<p><strong>Context.</strong> Industrial maintenance setting with 50k+ high-noise sensor
-time-series from crushing and grinding equipment.</p>
+<h3 id="predictive-maintenance--sensor-data-conditioning--feature-engineering-2025">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering (2025)</h3>
+<p><strong>Context.</strong> Industrial maintenance setting with 50k+ high-noise sensor time-series from crushing and grinding equipment.</p>
 
 <p><strong>What I built</strong></p>
-
 <ul>
-  <li>A reproducible preprocessing pipeline (smoothing, outlier capping, signal
-reconstruction) for noisy sensor data.</li>
-  <li>Reliability-focused feature sets including load ratios, temperature deltas,
-and transient-spike metrics.</li>
-  <li>Structured datasets ready for downstream failure-prediction models.</li>
+  <li>Preprocessing pipeline (smoothing, outlier capping, reconstruction)</li>
+  <li>Reliability-focused feature sets (load ratios, temperature deltas, transient spikes)</li>
+  <li>Structured datasets for downstream ML failure prediction</li>
 </ul>
 
-<p><strong>Tech stack</strong></p>
+<p><strong>Tech stack</strong>
+Python, Pandas, NumPy, Jupyter</p>
 
-<ul>
-  <li>Python, Pandas, NumPy, Jupyter</li>
-  <li>Time-series preprocessing, feature engineering, EDA</li>
-</ul>
-
-<p><strong>Impact</strong></p>
-
-<ul>
-  <li>Enabled future ML experimentation for early-warning indicators and
-reliability analysis on critical assets.</li>
-</ul>
+<p><strong>Impact</strong>
+Enabled future ML experimentation for early-warning indicators and reliability analysis.</p>
 
 <hr />
 
-<h2 id="trainops-simulation-data-optimization-2024">TrainOps Simulation Data Optimization (2024)</h2>
-
-<p><strong>Context.</strong> Data-engineering project using simulation outputs (~200k records)
-for rail operations planning.</p>
+<h3 id="trainops-simulation-data-optimization-2024">TrainOps Simulation Data Optimization (2024)</h3>
+<p><strong>Context.</strong> Data-engineering project using simulation outputs (~200k records) for rail operations planning.</p>
 
 <p><strong>What I built</strong></p>
-
 <ul>
-  <li>Python &amp; C++ parsers to convert raw simulation logs into structured,
-analysis-ready datasets.</li>
-  <li>Automation workflow reducing processing time by ~70%.</li>
-  <li>Pipelines integrating rider-survey data with onboard sensor logs for validation.</li>
+  <li>Python &amp; C++ log parsers</li>
+  <li>Automated workflow reducing processing time by ~70%</li>
+  <li>Integration of rider-survey data + sensor logs</li>
 </ul>
 
-<p><strong>Tech stack</strong></p>
+<p><strong>Tech stack</strong>
+C++, Python, Pandas, basic SQL, Git</p>
 
-<ul>
-  <li>C++, Python, Pandas, basic SQL, Git</li>
-</ul>
-
-<p><strong>Impact</strong></p>
-
-<ul>
-  <li>Improved scenario comparison and supported data-driven transit-planning decisions.</li>
-</ul>
+<p><strong>Impact</strong>
+Supported scenario comparison and data-driven transit planning.</p>
 
 <hr />
 
-<h2 id="predictive-maintenance-modeling-prototype-academic-202425">Predictive Maintenance Modeling Prototype (Academic, 2024–25)</h2>
-
-<p><strong>Context.</strong> Academic project inspired by industrial predictive-maintenance
-scenarios.</p>
+<h3 id="predictive-maintenance-modeling-prototype-academic-202425">Predictive Maintenance Modeling Prototype (Academic, 2024–25)</h3>
+<p><strong>Context.</strong> Academic project inspired by industrial predictive-maintenance scenarios.</p>
 
 <p><strong>What I built</strong></p>
-
 <ul>
-  <li>ML pipeline with cleaning, denoising, feature engineering, and exploratory labeling.</li>
-  <li>Baseline models (Random Forest, SVM, Gradient Boosting).</li>
-  <li>Evaluation with standard metrics + visualization.</li>
+  <li>ML cleaning, denoising, and feature engineering</li>
+  <li>Baseline models (RF, SVM, Gradient Boosting)</li>
+  <li>Evaluation + visualization</li>
 </ul>
 
-<p><strong>Tech stack</strong></p>
+<p><strong>Tech stack</strong>
+Python, scikit-learn, Pandas, NumPy, Matplotlib</p>
 
-<ul>
-  <li>Python, scikit-learn, Pandas, NumPy, Matplotlib</li>
-</ul>
-
-<p><strong>Outcome</strong></p>
-
-<ul>
-  <li>Provided foundational experimentation for later industrial predictive
-maintenance work.</li>
-</ul>
-
-<hr />
-
-<p>More projects coming soon.</p>
+<p><strong>Outcome</strong>
+Foundation for later industrial predictive-maintenance work.</p>
