--- a/resume/index.html
+++ b/resume/index.html
@@ -159,10 +159,59 @@
 
       <section class="page__content" itemprop="text">
         
-        <h2 id="resume">Resume</h2>
+        <p>Below is a concise snapshot of my background.<br />
+For a full CV, feel free to contact me directly.</p>
 
-<p>Aquí luego podemos pegar la versión resumida de tu CV
-(educación, experiencia, skills, proyectos, etc.).</p>
+<h3 id="education">Education</h3>
+
+<ul>
+  <li><strong>B.S. Computer Science</strong>, Brigham Young University (BYU)<br />
+Emphasis in Machine Learning and Data Science.<br />
+Relevant coursework: Data Structures, Algorithms, Discrete Math, Linear Algebra, Statistics, Machine Learning (planned), Data Science.</li>
+</ul>
+
+<h3 id="technical-skills">Technical Skills</h3>
+
+<ul>
+  <li><strong>Programming:</strong> Python, C++, Java (basics), JavaScript</li>
+  <li><strong>Data &amp; ML:</strong> NumPy, Pandas, scikit-learn, Jupyter, basic SQL</li>
+  <li><strong>Software:</strong> Git/GitHub, Linux command line, VS Code</li>
+  <li><strong>Focus areas:</strong> Time-series analysis, data preprocessing, feature engineering, ML prototyping</li>
+</ul>
+
+<h3 id="experience">Experience</h3>
+
+<ul>
+  <li>
+    <p><strong>Maintenance Data Analyst Intern</strong> – Predictive Maintenance – Sensor Data Conditioning<br />
+Processed 50k+ high-noise industrial sensor time-series from crushing and grinding equipment.<br />
+Built preprocessing workflows (noise reduction, outlier capping, signal reconstruction) and reliability-focused features to support downstream ML failure-prediction models.</p>
+  </li>
+  <li>
+    <p><strong>Data Analytics Intern</strong> – TrainOps Simulation Data Optimization<br />
+Developed Python/C++ parsers for 200k+ rail-simulation records.<br />
+Automated data cleaning and structuring, reducing processing time by ~70% and enabling faster scenario comparison for transit-planning decisions.</p>
+  </li>
+</ul>
+
+<h3 id="selected-projects">Selected Projects</h3>
+
+<p>See the <strong>Projects</strong> page for detailed write-ups. Highlights include:</p>
+
+<ul>
+  <li>Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering (2025)</li>
+  <li>TrainOps Simulation Data Optimization (2024)</li>
+  <li>Predictive Maintenance Modeling Prototype (Academic, 2024–25)</li>
+</ul>
+
+<h3 id="additional">Additional</h3>
+
+<ul>
+  <li><strong>Languages:</strong> Spanish (native), English (fluent)</li>
+  <li><strong>Location:</strong> Provo, Utah (open to relocation and remote roles)</li>
+  <li><strong>Interests:</strong> Applied ML in industrial settings, simulation data, reliability engineering, digital twins.</li>
+</ul>
+
 
         
       </section>
