deploy: 987cd3e4cf6432626aefc3e3ac2452b438903c15

--- a/resume/index.html
+++ b/resume/index.html
@@ -159,44 +159,102 @@
 
       <section class="page__content" itemprop="text">
         
-        <p>Below is a concise snapshot of my background.<br />
-For a full CV, feel free to contact me directly.</p>
+        <h1 id="resume">Resume</h1>
 
-<h3 id="education">Education</h3>
+<p>Machine Learning–oriented Computer Science student with industry experience in predictive analytics, simulation data engineering, and large-scale time-series processing. Skilled in Python, C++, statistical modeling, and data-driven reliability analysis. Passionate about applied machine learning in real-world engineering systems.</p>
 
+<hr />
+
+<h2 id="-education">🎓 Education</h2>
+
+<p><strong>Brigham Young University (BYU)</strong> — <em>B.S. in Computer Science, Machine Learning Emphasis (Expected Dec 2026)</em><br />
+Provo, UT<br />
+<strong>Honors Thesis:</strong> Unsupervised mode discovery in mineral-processing circuits (2025–2026).<br />
+<strong>Relevant Coursework:</strong> Machine Learning, Deep Learning, Data Science Capstone, Algorithms, Data Structures, Computer Systems, Probability &amp; Statistics.<br />
+<strong>Awards:</strong> Donald Goodyear Doll Sr. Scholarship • Dr. Gerald Hatch Scholarship • BYU Honors Program. :contentReference[oaicite:1]{index=1}</p>
+
+<hr />
+
+<h2 id="-technical-skills">🛠 Technical Skills</h2>
+
+<p><strong>Machine Learning &amp; Data:</strong><br />
+Time-series analysis, anomaly detection, feature engineering, EDA, model evaluation, data pipelines, noise reduction, clustering, basic forecasting, scikit-learn, Pandas, NumPy.</p>
+
+<p><strong>Programming:</strong><br />
+Python, C++, SQL, JavaScript.</p>
+
+<p><strong>Tools:</strong><br />
+Git, Linux, Jupyter Notebook, Power BI, AWS/Azure (basic).</p>
+
+<p><strong>Strengths:</strong><br />
+Large-scale data wrangling, simulation data processing, ML prototyping, reliability engineering datasets, statistical validation.</p>
+
+<hr />
+
+<h2 id="-experience">💼 Experience</h2>
+
+<h3 id="maintenance-data-analyst-intern--compañía-de-minas-buenaventura"><strong>Maintenance Data Analyst Intern — Compañía de Minas Buenaventura</strong></h3>
+<p><em>San Gabriel Unit, Moquegua, Peru | Jun 2025 – Aug 2025</em></p>
 <ul>
-  <li><strong>B.S. Computer Science</strong>, Brigham Young University (BYU)<br />
-Emphasis in Machine Learning and Data Science.</li>
+  <li>Processed and cleaned <strong>50k+ high-noise industrial sensor time-series</strong>, using smoothing, outlier capping, and signal reconstruction.</li>
+  <li>Performed EDA on crushing and grinding systems, identifying <strong>wear patterns &amp; ore-type correlations</strong> to support early-warning indicators.</li>
+  <li>Engineered <strong>15+ reliability-focused features</strong> (temperature deltas, load ratios, transient-spike metrics).</li>
+  <li>Structured <strong>100+ assets under ISO 14224/17359</strong>, improving traceability for maintenance and monitoring workflows. :contentReference[oaicite:2]{index=2}</li>
 </ul>
 
-<h3 id="technical-skills">Technical Skills</h3>
+<hr />
 
+<h3 id="data-analytics-intern--hatch-ltd-urban-solutions-sector"><strong>Data Analytics Intern — Hatch Ltd (Urban Solutions Sector)</strong></h3>
+<p><em>Vermont, USA | May 2024 – Aug 2024</em></p>
 <ul>
-  <li><strong>Programming:</strong> Python, C++, Java, JavaScript</li>
-  <li><strong>Data &amp; ML:</strong> NumPy, Pandas, scikit-learn, Jupyter, SQL</li>
-  <li><strong>Tools:</strong> Git/GitHub, Linux CLI, VS Code</li>
-  <li><strong>Focus:</strong> Time-series data, feature engineering, ML prototyping</li>
+  <li>Processed <strong>200k+ TrainOps simulation records</strong> to evaluate delays, network performance, and scenario fidelity.</li>
+  <li>Built Python &amp; C++ automation scripts reducing processing time <strong>by ~70%</strong> versus manual workflows.</li>
+  <li>Integrated rider-survey responses with sensor logs to identify demand patterns and validate service configurations.</li>
+  <li>Applied statistical and optimization methods to compare operational scenarios. :contentReference[oaicite:3]{index=3}</li>
 </ul>
 
-<h3 id="experience">Experience</h3>
+<hr />
 
+<h2 id="-selected-projects">🧪 Selected Projects</h2>
+
+<h3 id="honors-thesis--unsupervised-mode-discovery-in-mineral-processing-20252026"><strong>Honors Thesis — Unsupervised Mode Discovery in Mineral Processing (2025–2026)</strong></h3>
 <ul>
-  <li>
-    <p><strong>Maintenance Data Analyst Intern</strong> – Predictive Maintenance<br />
-Processed 50k+ industrial sensor time-series.<br />
-Developed preprocessing and feature engineering pipelines.</p>
-  </li>
-  <li>
-    <p><strong>Data Analytics Intern</strong> – TrainOps Simulation<br />
-Automated parsing/cleaning for 200k+ simulation records using Python/C++.<br />
-Reduced manual processing time ~70%.</p>
-  </li>
+  <li>Designing an unsupervised-learning framework for identifying operational modes in mineral-processing circuits.</li>
+  <li>Applying clustering, dimensionality reduction, and statistical validation to real plant data.</li>
+  <li>Goal: early detection of suboptimal operating states. :contentReference[oaicite:4]{index=4}</li>
 </ul>
 
-<h3 id="projects">Projects</h3>
+<h3 id="predictive-maintenance--sensor-data-conditioning--feature-engineering-2025"><strong>Predictive Maintenance — Sensor Data Conditioning &amp; Feature Engineering (2025)</strong></h3>
+<ul>
+  <li>Built a reproducible preprocessing pipeline for <strong>50k+ industrial time-series</strong> (smoothing, outlier capping, signal reconstruction).</li>
+  <li>Designed reliability-focused feature sets prepared for downstream ML prototyping.</li>
+  <li>Delivered structured datasets enabling early failure-prediction experimentation. :contentReference[oaicite:5]{index=5}</li>
+</ul>
 
-<p>Visit the <strong>Projects</strong> page for full write-ups.<br />
-Highlights: time-series conditioning, rail-simulation op</p>
+<h3 id="trainops-simulation-data-optimization-2024"><strong>TrainOps Simulation Data Optimization (2024)</strong></h3>
+<ul>
+  <li>Developed C++/Python parsers to transform <strong>200k+ simulation logs</strong> into analysis-ready datasets.</li>
+  <li>Reduced processing time <strong>~70%</strong>, enabling faster operational scenario evaluation.</li>
+  <li>Cross-validated simulation results using rider-survey and sensor logs. :contentReference[oaicite:6]{index=6}</li>
+</ul>
+
+<hr />
+
+<h2 id="-awards--leadership">🥇 Awards &amp; Leadership</h2>
+
+<ul>
+  <li>BYU Honors Program</li>
+  <li>Peruvian Emergency Response &amp; Rescue Program — Leadership training in high-pressure environments (coordination, rapid decision-making)</li>
+  <li>Donald Goodyear Doll Sr. Scholarship</li>
+  <li>Gerald Hatch Scholarship :contentReference[oaicite:7]{index=7}</li>
+</ul>
+
+<hr />
+
+<h2 id="-languages--certifications">🌐 Languages &amp; Certifications</h2>
+
+<p><strong>Languages:</strong> Spanish (Native), English (Fluent), French (Intermediate)<br />
+<strong>Certifications:</strong> MITx 6.00.1x • Harvard CS50x • IoT Programming (UCI/Coursera). :contentReference[oaicite:8]{index=8}</p>
 
         
       </section>
